--- a/app/src/main/res/layout/fragment_motion_layout.xml
+++ b/app/src/main/res/layout/fragment_motion_layout.xml
@@ -30,6 +30,14 @@
         app:layout_constraintGuide_percent="0.75"/>
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/for_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.055"/>
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_hu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,11 +62,45 @@
         app:layout_constraintGuide_percent="0.5"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_left"
+        android:id="@+id/btn_anime_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        app:layout_constraintVertical_chainStyle="packed"
+        android:text="@string/btn_text"
+
+        app:layout_constraintBottom_toTopOf="@+id/for_btn"
+        app:layout_constraintEnd_toEndOf="@+id/gl_vl"
+        app:layout_constraintStart_toStartOf="@+id/gl_vl"
+        app:layout_constraintTop_toBottomOf="@+id/for_btn"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_anime_explode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/btn_explode"
+
+        app:layout_constraintBottom_toTopOf="@+id/for_btn"
+        app:layout_constraintEnd_toEndOf="@+id/gl_vc"
+        app:layout_constraintStart_toStartOf="@+id/gl_vc"
+        app:layout_constraintTop_toBottomOf="@+id/for_btn"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_anime_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/btn_image"
+
+        app:layout_constraintBottom_toTopOf="@+id/for_btn"
+        app:layout_constraintEnd_toEndOf="@+id/gl_vr"
+        app:layout_constraintStart_toStartOf="@+id/gl_vr"
+        app:layout_constraintTop_toBottomOf="@+id/for_btn"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
         android:text="@string/left"
 
@@ -96,7 +138,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        app:layout_constraintTop_toBottomOf="@+id/gl_hd"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gl_hd" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
