--- a/app/src/main/res/xml/fragment_motion_layout_scene.xml
+++ b/app/src/main/res/xml/fragment_motion_layout_scene.xml
@@ -22,6 +22,13 @@
             app:layout_constraintEnd_toEndOf="@+id/gl_vr"
             app:layout_constraintStart_toStartOf="@+id/gl_vr"
             app:layout_constraintTop_toBottomOf="@+id/gl_hu"/>
+        <Constraint
+            android:layout_height="match_parent"
+            app:layout_editor_absoluteX="0dp"
+            android:layout_width="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/gl_hd"
+            android:id="@+id/container"
+            app:layout_constraintBottom_toBottomOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
