--- a/app/src/main/res/layout/fragment_motion_layout.xml
+++ b/app/src/main/res/layout/fragment_motion_layout.xml
@@ -30,12 +30,20 @@
         app:layout_constraintGuide_percent="0.75"/>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/for_btn"
+        android:id="@+id/for_btn_line_one"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.055"/>
+        app:layout_constraintGuide_percent="0.05" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/for_btn_line_two"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.125" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_hu"
@@ -43,7 +51,7 @@
         android:layout_height="wrap_content"
 
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.125"/>
+        app:layout_constraintGuide_percent="0.2"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_hc"
@@ -68,10 +76,10 @@
 
         android:text="@string/btn_text"
 
-        app:layout_constraintBottom_toTopOf="@+id/for_btn"
+        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_one"
         app:layout_constraintEnd_toEndOf="@+id/gl_vl"
         app:layout_constraintStart_toStartOf="@+id/gl_vl"
-        app:layout_constraintTop_toBottomOf="@+id/for_btn"/>
+        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_one"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_anime_explode"
@@ -80,10 +88,10 @@
 
         android:text="@string/btn_explode"
 
-        app:layout_constraintBottom_toTopOf="@+id/for_btn"
+        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_one"
         app:layout_constraintEnd_toEndOf="@+id/gl_vc"
         app:layout_constraintStart_toStartOf="@+id/gl_vc"
-        app:layout_constraintTop_toBottomOf="@+id/for_btn"/>
+        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_one"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_anime_image"
@@ -92,10 +100,22 @@
 
         android:text="@string/btn_image"
 
-        app:layout_constraintBottom_toTopOf="@+id/for_btn"
+        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_one"
         app:layout_constraintEnd_toEndOf="@+id/gl_vr"
         app:layout_constraintStart_toStartOf="@+id/gl_vr"
-        app:layout_constraintTop_toBottomOf="@+id/for_btn"/>
+        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_one"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_anime_move_trajectory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/btn_move_trajectory"
+
+        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_two"
+        app:layout_constraintEnd_toEndOf="@+id/gl_vl"
+        app:layout_constraintStart_toStartOf="@+id/gl_vl"
+        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_two"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_left"
