--- a/app/src/main/res/layout/fragment_motion_layout.xml
+++ b/app/src/main/res/layout/fragment_motion_layout.xml
@@ -130,6 +130,18 @@
         app:layout_constraintTop_toBottomOf="@+id/for_btn_line_two"/>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_anime_animator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="@string/animator"
+
+        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_two"
+        app:layout_constraintEnd_toEndOf="@+id/gl_vr"
+        app:layout_constraintStart_toStartOf="@+id/gl_vr"
+        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_two"/>
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
