--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,4 +38,14 @@
     <dimen name="appbar_height">250dp</dimen>
     <dimen name="collaps_toolbar_margin_end">64dp</dimen>
     <dimen name="collaps_toolbar_margin_start">48dp</dimen>
+    <dimen name="animation_fab_padding_bottom">16dp</dimen>
+    <dimen name="animation_fab_padding_end">150dp</dimen>
+    <dimen name="animation_fab_padding_top">100dp</dimen>
+    <dimen name="animation_fab_margin_end">5dp</dimen>
+    <dimen name="fab_margin_end">16dp</dimen>
+    <dimen name="fab_margin_bottom">16dp</dimen>
+    <dimen name="fab_elevation">5dp</dimen>
+    <dimen name="image_plus_margin_end">32dp</dimen>
+    <dimen name="image_plus_margin_bottom">32dp</dimen>
+    <dimen name="image_plus_elevation">10dp</dimen>
 </resources>
