--- a/app/src/main/res/layout/fragment_motion_layout.xml
+++ b/app/src/main/res/layout/fragment_motion_layout.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layoutDescription="@xml/fragment_motion_layout_scene">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/fragment_motion_layout_scene">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_vl"
@@ -177,14 +183,5 @@
         app:layout_constraintStart_toStartOf="@+id/gl_vc"
         app:layout_constraintTop_toBottomOf="@+id/gl_hc" />
 
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gl_hd"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
 </androidx.constraintlayout.motion.widget.MotionLayout>
+</FrameLayout>
