--- a/app/src/main/res/layout/fragment_motion_layout.xml
+++ b/app/src/main/res/layout/fragment_motion_layout.xml
@@ -1,187 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/container"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
+    <FrameLayout
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:background="@android:color/white">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            android:text="@string/select_animation"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutDescription="@xml/fragment_motion_layout_scene">
+        android:layout_marginTop="52dp"
+        app:layout_anchor="@id/toolbar"
+        app:layout_anchorGravity="bottom|center">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_vl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    </FrameLayout>
 
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.25"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_vc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_vr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.75"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/for_btn_line_one"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.05" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/for_btn_line_two"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.125" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_hu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2"/>
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_hc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/gl_hd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_anime_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/btn_text"
-
-        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_one"
-        app:layout_constraintEnd_toEndOf="@+id/gl_vl"
-        app:layout_constraintStart_toStartOf="@+id/gl_vl"
-        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_one"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_anime_explode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/btn_explode"
-
-        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_one"
-        app:layout_constraintEnd_toEndOf="@+id/gl_vc"
-        app:layout_constraintStart_toStartOf="@+id/gl_vc"
-        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_one"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_anime_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/btn_image"
-
-        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_one"
-        app:layout_constraintEnd_toEndOf="@+id/gl_vr"
-        app:layout_constraintStart_toStartOf="@+id/gl_vr"
-        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_one"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_anime_move_trajectory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/btn_move_trajectory"
-
-        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_two"
-        app:layout_constraintEnd_toEndOf="@+id/gl_vl"
-        app:layout_constraintStart_toStartOf="@+id/gl_vl"
-        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_two"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_anime_mix"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/mix"
-
-        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_two"
-        app:layout_constraintEnd_toEndOf="@+id/gl_vc"
-        app:layout_constraintStart_toStartOf="@+id/gl_vc"
-        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_two"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_anime_animator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/animator"
-
-        app:layout_constraintBottom_toTopOf="@+id/for_btn_line_two"
-        app:layout_constraintEnd_toEndOf="@+id/gl_vr"
-        app:layout_constraintStart_toStartOf="@+id/gl_vr"
-        app:layout_constraintTop_toBottomOf="@+id/for_btn_line_two"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/left"
-
-        app:layout_constraintBottom_toTopOf="@+id/gl_hu"
-        app:layout_constraintEnd_toEndOf="@+id/gl_vl"
-        app:layout_constraintStart_toStartOf="@+id/gl_vl"
-        app:layout_constraintTop_toBottomOf="@+id/gl_hu"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/right"
-
-        app:layout_constraintBottom_toBottomOf="@+id/gl_hu"
-        app:layout_constraintEnd_toEndOf="@+id/gl_vr"
-        app:layout_constraintStart_toStartOf="@+id/gl_vr"
-        app:layout_constraintTop_toBottomOf="@+id/gl_hu"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:text="@string/motion_layout"
-
-        app:layout_constraintBottom_toTopOf="@+id/gl_hc"
-        app:layout_constraintEnd_toEndOf="@+id/gl_vc"
-        app:layout_constraintStart_toStartOf="@+id/gl_vc"
-        app:layout_constraintTop_toBottomOf="@+id/gl_hc" />
-
-</androidx.constraintlayout.motion.widget.MotionLayout>
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
