Урок 5. Анимация Посмотрели макеты для изучения анимации с помощью constraintSet.

--- a/app/src/main/res/layout/fragment_animation_image.xml
+++ b/app/src/main/res/layout/fragment_animation_image.xml
@@ -13,6 +13,6 @@
         android:layout_height="wrap_content"
         android:scaleType="fitCenter"
 
-        app:srcCompat="@drawable/mars_photo" />
+        app:srcCompat="@drawable/photo_cat" />
 
 </LinearLayout>
