--- a/app/src/main/res/layout/fragment_animation_slide.xml
+++ b/app/src/main/res/layout/fragment_animation_slide.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/transitions_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/animate"
-        />
+        android:text="@string/animate" />
 
     <TextView
         android:id="@+id/text"
@@ -21,6 +18,5 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/transitions_example"
-        android:visibility="gone"
-        />
+        android:visibility="gone" />
 </LinearLayout>
