--- a/app/src/main/res/layout/fragment_animation_constraint_set.xml
+++ b/app/src/main/res/layout/fragment_animation_constraint_set.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container_constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#181818"
-    >
+    android:background="#181818">
 
     <ImageView
         android:id="@+id/backgroundImage"
@@ -33,8 +31,7 @@
         android:text="@string/date_animation_end"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/title"
-        app:layout_constraintRight_toRightOf="@+id/title"
-        />
+        app:layout_constraintRight_toRightOf="@+id/title" />
 
     <TextView
         android:id="@+id/title"
@@ -50,8 +47,7 @@
         android:textColor="#FFFF"
         android:textSize="45sp"
         app:layout_constraintRight_toLeftOf="@+id/backgroundImage"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
@@ -66,8 +62,7 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/description"
@@ -83,6 +78,5 @@
         android:textSize="22sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backgroundImage"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/backgroundImage" />
 </androidx.constraintlayout.widget.ConstraintLayout>
