--- a/app/src/main/res/layout/fragment_animation_motion.xml
+++ b/app/src/main/res/layout/fragment_animation_motion.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layoutDescription="@xml/fragment_motion_layout_scene">
-
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_vl"
@@ -13,7 +11,7 @@
         android:layout_height="wrap_content"
 
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.25"/>
+        app:layout_constraintGuide_percent="0.25" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_vc"
@@ -21,7 +19,7 @@
         android:layout_height="wrap_content"
 
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5"/>
+        app:layout_constraintGuide_percent="0.5" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_vr"
@@ -29,7 +27,7 @@
         android:layout_height="wrap_content"
 
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.75"/>
+        app:layout_constraintGuide_percent="0.75" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/for_btn_line_one"
@@ -53,7 +51,7 @@
         android:layout_height="wrap_content"
 
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2"/>
+        app:layout_constraintGuide_percent="0.2" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/gl_hc"
@@ -71,8 +69,6 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.3" />
 
-
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_left"
         android:layout_width="wrap_content"
@@ -83,7 +79,7 @@
         app:layout_constraintBottom_toTopOf="@+id/gl_hu"
         app:layout_constraintEnd_toEndOf="@+id/gl_vl"
         app:layout_constraintStart_toStartOf="@+id/gl_vl"
-        app:layout_constraintTop_toBottomOf="@+id/gl_hu"/>
+        app:layout_constraintTop_toBottomOf="@+id/gl_hu" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_right"
@@ -95,7 +91,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/gl_hu"
         app:layout_constraintEnd_toEndOf="@+id/gl_vr"
         app:layout_constraintStart_toStartOf="@+id/gl_vr"
-        app:layout_constraintTop_toBottomOf="@+id/gl_hu"/>
+        app:layout_constraintTop_toBottomOf="@+id/gl_hu" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_center"
