--- a/app/src/main/res/layout/fragment_animation_scroll.xml
+++ b/app/src/main/res/layout/fragment_animation_scroll.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:fitsSystemWindows="true">
 
     <FrameLayout
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:background="@android:color/white"
-        android:stateListAnimator="@animator/toolbar_elevation"
-        >
+        android:stateListAnimator="@animator/toolbar_elevation">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
@@ -23,8 +20,7 @@
             android:text="@string/state_list_animator_example"
             android:textColor="@color/black"
             android:textSize="20sp"
-            android:textStyle="bold"
-            />
+            android:textStyle="bold" />
     </FrameLayout>
 
     <androidx.core.widget.NestedScrollView
@@ -32,32 +28,27 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="52dp"
-        android:background="@android:color/white"
-        >
+        android:background="@android:color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/bg_earth"
-                />
+                app:srcCompat="@drawable/bg_earth" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/bg_mars"
-                />
+                app:srcCompat="@drawable/bg_mars" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/bg_system"
-                />
+                app:srcCompat="@drawable/bg_system" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
