--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -48,4 +48,5 @@
     <dimen name="image_plus_margin_end">32dp</dimen>
     <dimen name="image_plus_margin_bottom">32dp</dimen>
     <dimen name="image_plus_elevation">10dp</dimen>
+    <dimen name="header_recycler_text_size">35sp</dimen>
 </resources>
