--- a/app/src/main/res/layout/fragment_recycler_item_earth.xml
+++ b/app/src/main/res/layout/fragment_recycler_item_earth.xml
@@ -18,9 +18,9 @@
         />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/earthTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/earth"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/earthImageView"
