Урок 6. RecyclerView Изменили название элемента списка с помощью diffutil и payload

--- a/app/src/main/res/layout/fragment_recycler_item_mars.xml
+++ b/app/src/main/res/layout/fragment_recycler_item_mars.xml
@@ -18,7 +18,7 @@
         />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/marsTextView"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="35sp"
@@ -48,10 +48,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:tint="@color/design_default_color_error"
-        app:layout_constraintBottom_toBottomOf="@+id/marsTextView"
+        app:layout_constraintBottom_toBottomOf="@+id/name"
         app:layout_constraintEnd_toStartOf="@+id/addItemImageView"
-        app:layout_constraintStart_toEndOf="@+id/marsTextView"
-        app:layout_constraintTop_toTopOf="@+id/marsTextView"
+        app:layout_constraintStart_toEndOf="@+id/name"
+        app:layout_constraintTop_toTopOf="@+id/name"
         app:srcCompat="@android:drawable/arrow_up_float"
         />
 
@@ -61,10 +61,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:tint="@color/design_default_color_error"
-        app:layout_constraintBottom_toBottomOf="@+id/marsTextView"
+        app:layout_constraintBottom_toBottomOf="@+id/name"
         app:layout_constraintEnd_toStartOf="@+id/addItemImageView"
         app:layout_constraintStart_toEndOf="@+id/moveItemUp"
-        app:layout_constraintTop_toTopOf="@+id/marsTextView"
+        app:layout_constraintTop_toTopOf="@+id/name"
         app:srcCompat="@android:drawable/arrow_down_float"
         />
 
@@ -97,9 +97,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:tint="@color/cardview_shadow_start_color"
-        app:layout_constraintBottom_toBottomOf="@+id/marsTextView"
+        app:layout_constraintBottom_toBottomOf="@+id/name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/marsTextView"
+        app:layout_constraintTop_toTopOf="@+id/name"
         app:srcCompat="@drawable/ic_hamburger_menu_bottom_bar"
         />
 
