--- a/app/src/main/res/layout/fragment_recycler_item_earth.xml
+++ b/app/src/main/res/layout/fragment_recycler_item_earth.xml
@@ -18,7 +18,7 @@
         />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/earthTextView"
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="35sp"
