Урок 7.Добавлена "радуга" в названии выбранной темы в SettingFragment. Но стало падать приложение, при переходе на другой фрагмент (причину пока не нашел). Плюс визуальные изменения.

--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -6,7 +6,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?attr/backgroundAppThemeColor">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
@@ -15,7 +16,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:tabGravity="fill" />
+            app:tabGravity="fill"
+            android:background="?attr/backgroundAppThemeColor"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_pager"
