--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu_bottom_navigation_view"
+        android:background="?attr/backgroundMenuAppThemeColor"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
