--- a/app/src/main/res/layout/fragment_layouts_view_pager.xml
+++ b/app/src/main/res/layout/fragment_layouts_view_pager.xml
@@ -7,7 +7,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?attr/backgroundAppThemeColor">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
@@ -16,7 +17,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:tabGravity="fill" />
+            app:tabGravity="fill"
+            android:background="?attr/backgroundMenuAppThemeColor"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_pager"
