--- a/app/src/main/res/layout/fragment_picture_of_the_day_by_date.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day_by_date.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
