--- a/app/src/main/res/layout/fragment_picture_of_the_day_view_pager.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day_view_pager.xml
@@ -16,7 +16,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:tabGravity="fill" />
+            app:tabGravity="fill"
+            android:background="?attr/backgroundMenuAppThemeColor"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_pager"
