--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/backgroundAppThemeColor">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vertical_left"
@@ -76,6 +77,14 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.4"/>
 
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/horizontal_barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="auto_switch_night_mod"
+        />
+
 
     <TextView
         android:id="@+id/title"
@@ -145,6 +154,6 @@
         app:layout_constraintBottom_toTopOf="@+id/horizontal_for_apply_btn"
         app:layout_constraintEnd_toEndOf="@+id/vertical_center"
         app:layout_constraintStart_toStartOf="@+id/vertical_center"
-        app:layout_constraintTop_toBottomOf="@+id/horizontal_for_apply_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_barrier" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
