--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,17 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green">#FF03DAC5</color>
     <color name="light_gray">#a7c0cd</color>
+    <color name="dark_gray">#606D73</color>
     <color name="color_gray">#66000000</color>
+
+    <color name="red">#FF0000</color>
+    <color name="orange">#FF7F00</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="green">#00FF00</color>
+    <color name="light_blue">#2A77AC</color>
+    <color name="blue">#0000FF</color>
+    <color name="violet">#9400D3</color>
 
     <color name="color_primary">#FF6200EE</color>
     <color name="color_accent">#FF03DAC5</color>
